# src/routes/api.php
@@ -18,7 +18,7 @@ Route::group(['middleware' => ['json.response']], function () {
     // public routes
     Route::post('/login', 'AuthController@login')->name('login.api');
     Route::post('/register', 'AuthController@register')->name('register.api');
-    Route::post('/recoverpassword', 'AuthController@recoverpassword');
+    Route::post('/recoverpassword', 'AuthController@recoverpassword')->name('recoverpassword');
     Route::post('/resetpassword', 'AuthController@resetpassword');
     Route::get('/cities','StaticController@getAllCities');
     Route::get('/counties','StaticController@getAllCounties');
@@ -28,15 +28,13 @@ Route::group(['middleware' => ['json.response']], function () {
     Route::middleware(['auth:api'])->group(function () {
         Route::get('/profile', 'AuthController@profile')->name('profile.api');
         Route::get('/logout', 'AuthController@logout')->name('logout');
-
+        
         Route::middleware(['checkRole:dsu'])->group(function () {
-            Route::get('users', 'UserController@index');
-            Route::get('organisations', 'OrganisationController@index');
-            Route::get('resources', 'ResourceController@index');
-            Route::get('volunteers', 'VolunteerController@index');
-        }); 
+            Route::get('organisations/{id}/email', 'OrganisationController@sendNotification');
+        });
 
         Route::middleware(['checkRole:dsu,institution'])->group(function () {
+            Route::get('users', 'UserController@index');
             Route::get('users/{id}', 'UserController@show');
             Route::post('users', 'UserController@store');
             Route::put('users/{id}', 'UserController@update');
@@ -44,6 +42,7 @@ Route::group(['middleware' => ['json.response']], function () {
         });
 
         Route::middleware(['checkRole:dsu,ngo'])->group(function () {
+            Route::get('organisations', 'OrganisationController@index');
             Route::get('organisations/{id}', 'OrganisationController@show');
             Route::get('organisations/{id}/volunteers', 'OrganisationController@showVolunteers');
             Route::get('organisations/{id}/resources', 'OrganisationController@showResources');
@@ -51,6 +50,7 @@ Route::group(['middleware' => ['json.response']], function () {
             Route::put('organisations/{id}', 'OrganisationController@update');
             Route::delete('organisations/{id}', 'OrganisationController@delete');
 
+            Route::get('resources', 'ResourceController@index');
             Route::get('resources/list', 'ResourceController@list');
             Route::get('resources/organisations', 'ResourceController@showOrganisations');
             Route::get('resources/{id}', 'ResourceController@show');
@@ -63,13 +63,15 @@ Route::group(['middleware' => ['json.response']], function () {
             Route::post('courses', 'CourseController@store');
             Route::put('courses/{id}', 'CourseController@update');
             Route::delete('courses/{id}', 'CourseController@delete');
-        });
 
-        Route::middleware(['checkRole:dsu,ngo,institution'])->group(function () {
-            Route::get('volunteers/{id}', 'VolunteerController@show');
             Route::post('volunteers', 'VolunteerController@store');
             Route::put('volunteers/{id}', 'VolunteerController@update');
             Route::delete('volunteers/{id}', 'VolunteerController@delete');
+        });
+
+        Route::middleware(['checkRole:dsu,ngo,institution'])->group(function () {
+            Route::get('volunteers', 'VolunteerController@index');
+            Route::get('volunteers/{id}', 'VolunteerController@show');
         });
 
         Route::get('filter/resources/type_name', 'FilterController@filterResourcesTypeName');
